[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clicks_util"
version = "0.0.2"
authors = [
  { name="CuzImClicks" },
]
description = "Utilities for CuzImClicks"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
